--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   ],
   "author": "Morphosium Yazilim ve Donanim Hizmetleri Ticaret Ltd. Sti.",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+
+  },
   "devDependencies": {
     "@lernetz/gulp-typescript-bundle": "^0.3.1",
     "es6-imports-renamer": "^0.1.6",
@@ -29,7 +31,8 @@
     "lodash.template": "^4.5.0",
     "typedoc": "^0.20.20",
     "typescript": "^3.9.7",
-    "yargs-parser": "^20.2.4"
+    "yargs-parser": "^20.2.4",
+    "shell-quote": "^1.7.2"
   },
   "repository": {
     "type": "git",
